# jomp16-bot-rust

./: .gitignore  Cargo.toml  config.sample.yml
src/: config.rs  ctcp.rs  geoip_response.rs  irc_ext.rs  irc_handler.rs  irc_state.rs  main.rs  privmsg.rs
