[package]
name = "jomp16-bot-own"
version = "0.1.0"
authors = ["José Olívio M. Pedrosa <root@rwx.ovh>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smol = { version = "0.1", features = ["tokio02"] }
async-native-tls = "0.3.3"
blocking = "0.4.6"
anyhow = "1.0.31"
futures = "0.3.5"
async-io = "0.1.2"
async-dup = "1.2.1"
simple-irc = "0.3.2"