[package]
name = "jomp16-bot-own"
version = "0.1.0"
authors = ["José Olívio M. Pedrosa <root@rwx.ovh>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smol = { version = "0.1", features = ["tokio02"] }
async-native-tls = "0.3"
blocking = "0.4"
anyhow = "1.0"
futures = "0.3"
async-io = "0.1"
async-dup = "1.2"
simple-irc = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
log = "0.4"
pretty_env_logger = "0.4"
base64 = "0.12.3"
# Add openssl-sys as a direct dependency so it can be cross compiled to
# x86_64-unknown-linux-musl using the "vendored" feature below
openssl-sys = "*"

# GeoIP
maxminddb = "0.14"
dns-lookup = "1.0"
chrono = "0.4"
regex = "1"

[profile.release]
lto = true

[features]
# Force openssl-sys to staticly link in the openssl library. Necessary when
# cross compiling to x86_64-unknown-linux-musl.
vendored = ["openssl-sys/vendored"]
